# PrintHalo

./: .gitignore  CLAUDE.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  WORKFLOW-ORCHESTRATION.md  pyproject.toml
.claude/: settings.json
.github/workflows/: version-stamp.yml
.orch/: orch.yml
docs/: README.md
esphome/: round-amoled-466.yaml  round-gc9a01a-240.yaml  secrets.yaml.example  version.txt
scripts/: compile-esphome.sh  orch-gate.sh
src/: example.py
tasks/: lessons.md  todo.md
tests/: test_dashboard_spec.py  test_example.py  test_licensing.py
