[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-template"
version = "0.1.0"
description = "Self-bootstrapping repo template wired for agent-orch."
requires-python = ">=3.10"

# Tests use stdlib unittest — no test deps. Run: python3 -m unittest discover -s tests
