[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "printhalo"
version = "0.1.0"
description = "PrintHalo — ESP32 dashboard for Bambu Lab printers."
requires-python = ">=3.10"
license = { text = "MIT" }

# Tests use stdlib unittest — no test deps. Run: python3 -m unittest discover -s tests
